--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <!-- Setting Meta Tables -->
@@ -29,6 +29,9 @@
     <div id="ROOT">
       <label for="Password_Input" class="form-label">Password!</label>
       <input id="Password_Input" name="Password_Input" class="form-control" />
+      <label for="Password_Length" class="form-label">Max Password Length!</label>
+      <input type="number" id="Password_Length" name="Password_Length" class="form-control" />
+
       <label for="Options" class="form-label">Options</label>
       <div id="Options" class="Row-Align">
         <input
@@ -41,18 +44,21 @@
         <input
           type="checkbox"
           class="btn-check"
-          id="number-check"
+          id="Number-check"
           autocomplete="off"
         />
-        <label class="btn btn-primary" for="number-check">Symbols</label>
+        <label class="btn btn-primary" for="Number-check">Numbers</label>
         <input
           type="checkbox"
           class="btn-check"
-          id="symbol-check"
+          id="Symbol-check"
           autocomplete="off"
         />
-        <label class="btn btn-primary" for="symbol-check">Symbols</label>
+        <label class="btn btn-primary" for="Symbol-check">Symbols</label>
       </div>
+      <button type="button" id="Generate" class="btn btn-success">
+        Generate
+      </button>
     </div>
 
     <!-- Website JS -->
